# agentrep-worker

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  pyproject.toml  skills-lock.json
.claude/: settings.json
.claude/hooks/: check_readme.py
src/: main.py
src/mcp_client/: client.py
src/model/: load.py
terraform/: .terraform.lock.hcl  bedrock_agentcore.tf  main.tf  terraform.tfvars  variables.tf
